# rag-test-suite

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: mischa-loop.local.md
docs/: DEPLOYMENT_READINESS_REPORT.md  INTEGRATION_TEST_PLAN.md  STATUS.md  api-configuration-plan.md  code-review-plan.md  deployment-investigation.md  implementation-plan.md  ui-integration-document.md  ui-integration-plan.md
examples/: sample_tests.csv
src/crewai_test_suite/: __init__.py  flow.py  main.py  models.py
src/crewai_test_suite/config/: __init__.py  settings.yaml
src/crewai_test_suite/crews/: __init__.py
src/crewai_test_suite/crews/discovery/: __init__.py  crew.py
src/crewai_test_suite/crews/evaluation/: __init__.py  crew.py
src/crewai_test_suite/crews/prompt_generator/: __init__.py  (+1 more)
src/crewai_test_suite/tools/: __init__.py  evaluator.py  rag_query.py
src/crewai_test_suite/utils/: __init__.py
src/rag_test_suite/: flow.py  main.py  models.py
src/rag_test_suite/config/: __init__.py  loader.py
src/rag_test_suite/crews/: __init__.py
src/rag_test_suite/tools/: __init__.py  crew_runner.py  rag_query.py
tests/: __init__.py  conftest.py  e2e_test.py  test_config.py  test_crew_runner_extended.py  test_crews.py  test_discovery_extended.py  test_flow.py  test_main.py  test_mcp_tools.py  test_models.py  test_prompt_generator.py  test_rag_connectivity.py  test_rag_query_extended.py  test_reporting_extended.py  test_tools.py
tests/fixtures/: sample_rag_response.json
tests/integration/: test_api_rag_configuration.py  test_rag_connectivity.py
(+24 files in other folders)
